# Practice-design-pattern

./: .gitignore  README.md  requirements.txt
.github/workflows/: github_public_key.py  run_github_public_key.yaml  test.yml  test_github_public_key.py
abstract_factory/: Main.py  QiitaApi.py
edit_spreadsheet/: aws-sample.py  bootstrap.sh  migration.sh  pyproject.toml
edit_spreadsheet/.github/workflows/: push.yml
edit_spreadsheet/edit_spreadsheet/: bootstrap.sh  copy_environment.py  edit_spreadsheet.py  test_user.yml
edit_spreadsheet/edit_spreadsheet/cashman/: app.py  config.py  database.py  index.py
edit_spreadsheet/edit_spreadsheet/cashman/model/: expense.py  income.py  transaction.py  user.py
edit_spreadsheet/edit_spreadsheet/selenium/: main.py
edit_spreadsheet/migrations/versions/: e05941a0da74_.py
edit_spreadsheet/tests/: test_edit_spreadsheet.py
effective-python/: before_refactor.py  refactor.py  use_classmethod.py  use_method_instead_of_simple_interface.py
factory/: conftest.py  factories.py  model.py  test_data.py  test_email.py
factory_method/: Main.py  MainSecond.py
iterator/: FileName.py  Main.py  checkSudo.py  editSpread.py  fetchInfoPasswd.py  fileOpen.py
iterator/iterator/: Aggregate.py  Book.py  Iterator.py  concreteIterator.py
strategy/: Main.py
utils/: aws_cost_api.py  beautiful.py  change_timezone.py  generator.py  github_public_key.py  object-oriented.py  practice_list.py  sendgrid.py  sendgrid_api_key.py  sendgrid_teammates.py  sendgrid_teammates_mock.py  ssh_etc_passwd.sh  yq.sh
utils/sendgrid/: diff.js  main.js  (+2 more)
(+11 files in other folders)
