[tool.poetry]
name = "edit_spreadsheet"
version = "0.1.0"
description = ""
authors = ["bluesDD <dd11blues@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gspread = "^3.6.0"
boto = "^2.49.0"
Flask = "^1.1.2"
marshmallow = "^3.7.0"
sqlalchemy = "^1.3.18"
flask_sqlalchemy = "^2.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
